2007-04-03 Alexander Malysh <amalysh at kannel.org>
   * gw/dlr.h: changed DLR_SMSC_FAIL back to 0x10.
     Thanks to Ben Suffolk <ben at vanilla.net> for patch.

2007-04-02 Alexander Malysh <amalysh at kannel.org>
   * gwlib/octstr.c: prevent possible heap smashing

2007-03-30 Alexander Malysh <amalysh at kannel.org>
   * wap/wsp_caps.c: fixed possible heap smashing.

2007-02-27  Stipe Tolj  <stolj at kannel.org>
(CB) * gwlib/cfg.def, gw/bb_boxc.c: re-defining logic for the 'smsbox-route' group
     that is used for MO routing to different (identified) smsbox connections.
     We know support the splitting of shortcodes depending on various source
     smsc-ids to various smsbox connections. So this behaviour is more generic
     then the one before. The naming convention changed, this needs to be noted
     in the NEWS file for upcoming relase.
     [Msg-Id: <45C25496.4020003@tolj.org>]
     
2007-02-27  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/emimsg.[ch]: adding function emimsg_duplicate() to allow
     duplication of the struct. This is usefull in various ways and places.

2007-02-27 Alexander Malysh <amalysh at kannel.org>
   * gwlib/octstr.h: fixed octstr_dump that dumped Octstr with GW_INFO loglevel.

2007-02-26 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_at.c: fixed bug that AT SMSC put UDH without UDH len.
     Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for the patch.

2007-02-26 Alexander Malysh <amalysh at kannel.org>
   * gw/sms.c: fixed two issues (1) max_part_len calculation;
     (2) we dropped last utf-8 multibyte sequence.
     [Msg-ID: <op.tnch9hnmran2ed@ppc.local>]

2007-01-31 Alexander Malysh <amalysh at kannel.org>
   * gw/bb_smscconn.c: use enum in return from bb_smscconn_receive.

2007-01-29 Andreas Fink <andreas at fink.org>
   * gwlib/octstr.c: fixed octstr_split for cases where first occurence of 
     separator is at position 0

2007-01-26 Alexander Malysh <amalysh at kannel.org>