@@ -1,3 +1,7 @@
+2007-04-03  Stipe Tolj  <stolj at kannel.org>
+   * doc/userguide/userguide.xml: documented change of 'smsbox-route' group
+     logic from the commit on 2007-02-27.
+
 2007-04-03 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.h: changed DLR_SMSC_FAIL back to 0x10.
      Thanks to Ben Suffolk <ben at vanilla.net> for patch.
